stop overflow on body

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,11 +1,6 @@
 .card{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) 300px);
-    margin: 1.5rem;
-    padding: 1rem;
     border-radius: 1rem;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.4) 100%);
-    justify-content: space-between;
     box-shadow: 6px 6px 6px rgba(122, 122, 122, 0.212);
 }
 
@@ -21,7 +16,7 @@
 
 .title{
     font-family: "Blonde";
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-size: larger;
 }
 
