--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -17,7 +17,7 @@
         width: 95%;
         border-radius: 2rem;
         display: flex;
-        transform: rotate(1deg);
+        /* transform: rotate(1deg); */
 }
 
 @media only screen and (max-width: 800px) {
